--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,15 +12,20 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.2",
+    "node-cron": "^3.0.3",
     "node-traceroute": "^0.0.1",
     "nodejs-traceroute": "^2.0.1",
     "ping": "^0.4.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.3",
+    "@types/node-cron": "^3.0.11",
     "@types/ping": "^0.4.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
